# onshape-urdf-exporter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yaml  release.yaml
docs/: conf.py  config.rst  design.rst  index.rst  installation.rst  kinematic_loops.rst
docs/source/: design.rst  index.rst
onshape_urdf_exporter/: __main__.py  config.py  config_file.py  csg.py  features.py  load_robot.py  robot_description.py  stl_combine.py  stl_utils.py
onshape_urdf_exporter/onshape_api/: client.py  onshape.py
